#256 fix faq answer link wrapping

--- a/src/components/Faq/Faq.css
+++ b/src/components/Faq/Faq.css
@@ -216,6 +216,10 @@
   }
 
   &__answer {
+    a {
+      word-break: break-all;
+    }
+
     blockquote {
       border: 1px solid var(--c__red);
       border-radius: 6px;
